--- a/src/ckhedge_frontend/index.html
+++ b/src/ckhedge_frontend/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>ckHedge</title>
+  <title>ckHEDGE</title>
   <base href="/" />
   <link rel="icon" href="/favicon.ico" />
 </head>
